internal/controller/testdata/postgres/zalando-basic/contains/iam-logs-policy.yaml
---
action: create
matcher: Subset
object:
  apiVersion: iam.cnrm.cloud.google.com/v1beta1
  kind: IAMPolicyMember
  metadata:
    name: postgres-pod-logs-writer
    namespace: my-team
  spec:
    role: roles/logging.logWriter
    member: serviceAccount:postgres-pod@test-gcp-project.iam.gserviceaccount.com
    resourceRef:
      kind: Project
      external: projects/test-gcp-project
