internal/controller/testdata/postgres/zalando-basic/contains/iam-storage-policy.yaml
---
action: create
matcher: Subset
object:
  apiVersion: iam.cnrm.cloud.google.com/v1beta1
  kind: IAMPolicyMember
  metadata:
    name: pg-gcs-my-team-3c119b57
    namespace: serviceaccounts
  spec:
    role: roles/storage.objectUser
    member: serviceAccount:postgres-pod@test-gcp-project.iam.gserviceaccount.com
    resourceRef:
      kind: StorageBucket
      external: test-wal-bucket
