internal/controller/testdata/postgres/zalando-basic/contains/iam-wi-policy.yaml
---
action: create
matcher: Subset
object:
  apiVersion: iam.cnrm.cloud.google.com/v1beta1
  kind: IAMPolicyMember
  metadata:
    name: postgres-pod-wi-user
    namespace: my-team
  spec:
    role: roles/iam.workloadIdentityUser
    member: serviceAccount:test-gcp-project.svc.id.goog[pg-my-team/postgres-pod]
    resourceRef:
      kind: IAMServiceAccount
      name: postgres-pod
