internal/controller/testdata/postgres/zalando-basic/contains/netpol.yaml
---
action: createOrUpdate
matcher: Subset
object:
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    labels:
      postgres.data.nais.io/name: test-db
    name: test-db
    namespace: pg-my-team
  spec:
    podSelector:
      matchLabels:
        cluster-name: test-db
    policyTypes:
      - Egress
      - Ingress
    egress:
    - to:
      - podSelector:
          matchLabels:
            cluster-name: test-db
    ingress:
    - from:
      - podSelector:
          matchLabels:
            cluster-name: test-db
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: nais-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: postgres-operator
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: nais-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: nais-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: alloy
      ports:
        - port: metrics
